[gd_scene load_steps=6 format=3 uid="uid://dk5h60re5aqrx"]

[ext_resource type="Script" path="res://settings.gd" id="1_w131m"]
[ext_resource type="Theme" uid="uid://bgesf4ddovn0p" path="res://themes/SHAKE_ENGINE_GUI/SHAKE_ENGINE_GUI.tres" id="2_egn8l"]

[sub_resource type="Animation" id="Animation_m7wih"]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 0.466667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ts142"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mvfrb"]
_data = {
"RESET": SubResource("Animation_ts142"),
"fade": SubResource("Animation_m7wih")
}

[node name="Settings" type="CanvasLayer"]
layer = 10
follow_viewport_enabled = true
script = ExtResource("1_w131m")

[node name="Control" type="Control" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("2_egn8l")

[node name="Panel" type="Panel" parent="Control"]
offset_right = 754.0
offset_bottom = 481.0

[node name="TabBar" type="TabContainer" parent="Control/Panel"]
layout_mode = 0
offset_left = -8.0
offset_top = -50.0
offset_right = 754.0
current_tab = 0

[node name="Audio" type="Control" parent="Control/Panel/TabBar"]
layout_mode = 2
metadata/_tab_index = 0

[node name="s_master_volume" type="HSlider" parent="Control/Panel/TabBar/Audio"]
self_modulate = Color(1, 0.572549, 0, 1)
layout_mode = 0
offset_left = 24.0
offset_top = 39.0
offset_right = 277.0
offset_bottom = 55.0
max_value = 2.0
step = 0.01
value = 1.0
tick_count = 8

[node name="Label" type="Label" parent="Control/Panel/TabBar/Audio/s_master_volume"]
layout_mode = 0
offset_left = 53.0
offset_top = -24.0
offset_right = 203.0
offset_bottom = 18.0
text = "Master volume"
horizontal_alignment = 1

[node name="Video" type="Control" parent="Control/Panel/TabBar"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control"]
libraries = {
"": SubResource("AnimationLibrary_mvfrb")
}

[connection signal="value_changed" from="Control/Panel/TabBar/Audio/s_master_volume" to="." method="_on_s_master_volume_value_changed"]
